--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/examenAmineHamed?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/tast1?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ###
